--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="C:\Users\HP\OneDrive\Desktop\Pig_Game\style.css"
+      href="script.js"
     />
     <title>Roll A Dice</title>
   </head>
