--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
     </main>
-    <script src="C:\Users\HP\OneDrive\Desktop\Pig_Game\script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
